apps/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
spec:
  ports:
  - name: webui
    port: 8265
    protocol: TCP
    targetPort: 8265
  - name: server
    port: 8266
    protocol: TCP
    targetPort: 8266
  selector:
    app: tdarr
